# NextCatGame

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Linux.mk  Makefile  README.md  Windows.mk  app.hpp  input.hpp  video.hpp
src/: app.cpp  app.h  app.hpp  common.h  common.hpp  event.cpp  event.h  input.cpp  input.h  input.hpp  log.h  main.cpp  texture.cpp  texture.h  video.cpp  video.h  video.hpp
